test/classes/assignments/noAssignClassModuleScope.good
noAssignClassModuleScope.chpl:13: error: Can't overload assignments for class types
